                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-09-2005 added: logpath for xbmc.log file! Set the path where the log file should be created. [GeminiServer]
                     If no path is set the Default Q:\ path will be used. Example: <logpath>E:\TDATA\0face008\</logpath>
 - 16-09-2005 fixed: z: is now mapped to the correct drive.
 - 16-09-2005 added: New builtin command: XBMC.Notification(<header>,<message>). Will show a KAI toast dialog with the specified header and message.
 - 16-09-2005 changed: XBMC.AlarmClock() can now execute any builtin. NEW SYNTAX! XBMC.AlarmClock(<builtincommand>,<time>).
 - 14-09-2005 changed: Playlists skip to next song when it an unplayable item is encountered
 - 13-09-2005 fixed: DVDPlayer was unable to play .ac3 files
 - 13-09-2005 fixed: DVDPlayer wouldn't display subtitles unless the subtitles visible option was toggled of and on in osd
 - 13-09-2005 fixed: DVDPlayer didn't display anything when in the background
 - 13-09-2005 fixed: DVDPlayer would play horribly choppy when there was no audio stream present
 - 13-09-2005 added: Display of type of audiostream (Commentary, For Hearing impaired on those dvd's that support it)
 - 13-09-2005 changed: dvdplayer now select and show audio and subtitle streams, soly based on what's specifed in ifo files. mapping of this to the mpeg streams should now be correct too
 - 13-09-2005 added: Alternative ascii-gfx Filezilla (FTP) Welcome MSG. Disabled by default, to enable, first disable (comment) org. MSG, then uncomment new MSG. Use an ASCII capable font for display in ftpCLIENT. Thx to h8!
 - 12-09-2005 changed: XBMC DVD-Player is public now, and is now used by default when playing dvd's